--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo</title>
-    <link rel="stylesheet" href="./assets01/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
         <p id="resultado"></p>
     </section>
 
-    <script src="./assets01/js/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
