--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div> Sobrepeso</div><br>
             <div> Obesidade grau 1</div><br>
             <div> Obesidade grau 2</div><br>
-            <div> Obesidade grau 3</div><br>
+            <div> Obesidade de grau 3</div><br>
         </div>
         <h1> Calcule seu IMC</h1>
         <form id="formulario" action="/">
